--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".resetPassword">
+    tools:context=".resetPassword"
+    android:background="#e6f2ff"
+    >
 
     <LinearLayout
         android:layout_centerHorizontal="true"
@@ -12,26 +14,115 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_margin="15dp"
-            android:textAlignment="center"
-            android:text="سوف يتم ارسال رابط إلى ايميلك من أجل اعادة تعيين كلمة السر"
-            android:id="@+id/plain"
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
-    <EditText
-        android:layout_margin="15dp"
-        android:inputType="textEmailAddress"
-        android:hint="فضلاً أدخل الايميل"
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:layout_margin="15dp"
-        android:id="@+id/buttonSend"
-        android:text="ارسال"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#ffffff"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="14dp"
+            android:layout_marginBottom="20dp"
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    app:cardElevation="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:backgroundTint="#e29c9c"
+                    app:cardCornerRadius="20dp"
+
+                    >
+
+                    <TextView
+
+                        android:id="@+id/plain"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="سوف يتم ارسال رابط إلى ايميلك من أجل اعادة تعيين كلمة السر"
+                        android:layout_marginTop="3dp"
+                        android:textColor="#ffff"
+                        android:textStyle="bold|italic"
+                        android:textSize="15sp"
+                        />
+
+
+
+
+                </android.support.v7.widget.CardView>
+
+                <View
+                    android:id="@+id/v1"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@id/card_1"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="#1fabcb" />
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:drawableLeft="@drawable/ic_email_black_24dp"
+                    android:drawablePadding="12dp"
+                    android:inputType="textEmailAddress"
+                    android:hint="فضلاً أدخل الايميل"
+                    android:layout_below="@+id/v1"
+                    android:textAlignment="center"
+                    android:textColor="#000"
+                    android:textDirection="ltr"
+                    android:textSize="16dp" />
+
+                <View
+                    android:id="@+id/v2"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@+id/email"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="#1fabcb" />
+
+                <Button
+                    android:layout_margin="15dp"
+                    android:id="@+id/buttonSend"
+                    android:text="ارسال"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/v2"
+                    android:background="@drawable/buttonsh2"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:textColor="#ffff"
+                    android:drawableRight="@drawable/send_40"
+                    />
+
+
+            </RelativeLayout></android.support.v7.widget.CardView>
+
+
+
+
+
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
