--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,61 +2,187 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#e6f2ff"
     tools:context=".SignUpActivity">
 
-<LinearLayout
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textview3"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp"
-        android:text="تسجيل"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#1fabcb"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
-        />
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:text="تسجيل"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textAlignment="center"
+                    android:textColor="#ffffff"
+                    android:textSize="25dp"
+                    android:textStyle="italic|bold" />
 
-    <Button
-        android:layout_margin="15dp"
-        android:id="@+id/buttonSignUpInstructor"
-        android:text="تسجيل أستاذ"
-        android:background="@drawable/buttonshape"
-        android:textSize="20sp"
-        android:textColor="@color/white"
+            </RelativeLayout>
 
+
+        </android.support.v7.widget.Toolbar>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="90dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/roundimage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:srcCompat="@drawable/login"
+        tools:ignore="MissingConstraints" />
 
-    <Button
-        android:layout_margin="15dp"
-        android:id="@+id/buttonSignupStudent"
-        android:text="تسجيل طالب"
-        android:textSize="20sp"
-        android:background="@drawable/buttonshape"
-        android:textColor="@color/white"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="308dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="MissingConstraints">
 
-    <TextView
-        android:textAlignment="center"
-        android:text="لديك حساب مسبقاُ؟؟ اضغط هنا"
-        android:id="@+id/textViewSignIn"
-        android:textSize="20sp"
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_1"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:backgroundTint="#f4d7d7"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="10dp"
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            >
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                >
+                <android.support.v7.widget.CardView
+                    android:id="@+id/f"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+
+                    android:backgroundTint="#ffffff"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="10dp"
+                    android:layout_margin="15dp"
+                    >
+
+                    <Button
+
+                        android:id="@+id/buttonSignUpInstructor"
+                        android:text="تسجيل أستاذ"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/buttonsh2"
+                        android:drawableLeft="@drawable/teacher"
+                        android:textAlignment="center"
+                        android:textDirection="rtl"
+                        android:textColor="#ffff"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        />
+                </android.support.v7.widget.CardView>
 
 
-</LinearLayout>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/f2"
+                    android:layout_below="@id/f"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+
+                    android:backgroundTint="#ffffff"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="10dp"
+                    android:layout_margin="15dp"
+                    >
+
+
+
+                    <Button
+                        android:id="@+id/buttonSignupStudent"
+                        android:text="تسجيل طالب"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/buttonsh2"
+                        android:drawableLeft="@drawable/student"
+
+                        android:textAlignment="center"
+                        android:textDirection="rtl"
+                        android:textColor="#ffff"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        />
+                </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+        <TextView
+            android:id="@+id/textViewSignIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/card_1"
+            android:layout_margin="22dp"
+            android:text="هل نسيت كلمة السر؟؟ اضغط هنا "
+            android:textAlignment="center"
+            android:textDirection="rtl"
+            android:textColor="#e29c9c"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+
+
+
+
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
