--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".schedule"
-    tools:showIn="@layout/app_bar_instructor_main">
+    tools:showIn="@layout/app_bar_instructor_main"
+    android:background="#e6f2ff"
+    >
 
 
     <ScrollView
@@ -22,45 +24,174 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/button_choose_date_schedule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="اختر التاريخ"
-                android:layout_gravity="center"
-                android:layout_marginVertical="20dp"
-                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textViewDate"
-                android:layout_width="wrap_content"
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    app:cardElevation="10dp"
+                    android:id="@+id/card11"
+                    android:backgroundTint="#1fabcb"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:background="#1fabcb"
+                        >
+
+
+                        <Button
+                            android:id="@+id/button_choose_date_schedule"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="اختر التاريخ"
+                            android:background="#1fabcb"
+                            android:drawableLeft="@drawable/today_64"
+                            android:textStyle="bold"
+                            android:textSize="20dp"
+                            android:textColor="#ffff"
+
+                            />
+
+
+
+
+
+
+
+                    </RelativeLayout></android.support.v7.widget.CardView>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"
+                    android:background="#FFFDE7"
+                    android:id="@+id/view11"
+                    android:layout_below="@id/card11"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="350dp"
+                    android:id="@+id/card12"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/view11"
+                    android:layout_marginTop="20dp"
+                    app:cardElevation="12dp"
+                    app:cardCornerRadius="12dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="#ffffcc"
+                    android:layout_centerHorizontal="true"
+                    >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:backgroundTint="#ffffcc"
+                        >
+
+                        <TextView
+                            android:id="@+id/textViewDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="التاريخ"
+                            android:textSize="35sp"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:textDirection="ltr"
+                            android:textColor="#33001a"
+
+
+                            />
+                    </RelativeLayout>
+
+
+                </android.support.v7.widget.CardView>
+
+                <Button
+                    android:id="@+id/button_edit_spots"
+                    android:layout_width="175dp"
+                    android:layout_height="60dp"
+                    android:text="تعديل الأوقات المتاحة"
+                    android:layout_below="@id/card12"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/buttonshape"
+                    android:textSize="18dp"
+                    android:layout_marginTop="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#ffff"
+                    android:layout_marginBottom="10dp"
+                    android:drawableRight="@drawable/edit_40"
+                    />
+
+                <TextView
+                    android:id="@+id/noneTextSchedule"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="لا يوجد مواعيد متاحة في هذا اليوم !"
+                    android:textSize="20dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
+
+                    android:layout_below="@id/button_edit_spots"
+                    android:textDirection="rtl"
+                    android:textAlignment="center"
+                    android:layout_alignParentRight="true"
+                    android:padding="6dp"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"
+                    android:background="#ffff"
+                    android:id="@+id/view13"
+                    android:layout_below="@id/noneTextSchedule"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    />
+
+
+            </RelativeLayout>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="التاريخ"
-                android:textSize="25sp"
-                android:layout_gravity="center"
-                />
-            <Button
-                android:id="@+id/button_edit_spots"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="تعديل الأوقات المتاحة"
-                android:layout_gravity="center"
-                android:layout_marginVertical="20dp"/>
-            <TextView
-                android:id="@+id/noneTextSchedule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="لا يوجد مواعيد متاحة في هذا اليوم !"
-                android:textSize="20sp"
-                android:layout_gravity="center"
-                />
-            <ListView
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
-                android:id="@+id/listViewSchedule"
-                android:layout_width="match_parent"
-                android:layout_height="280dp">
-            </ListView>
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                app:cardCornerRadius="14dp"
+                android:backgroundTint="#ffff"
+                app:cardElevation="14dp"
+                >
+
+                <ListView
+
+                    android:id="@+id/listViewSchedule"
+                    android:layout_width="match_parent"
+                    android:layout_height="280dp"
+
+                    android:layout_margin="4dp"
+                    >
+                </ListView>
+
+            </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
 
         </LinearLayout>
 
