--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -1,28 +1,106 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#e6f2ff"
+    tools:context=".student_main"
+    tools:showIn="@layout/app_bar_student_main"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:orientation="vertical"
+    >
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#fff"
+        >
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPagerQuote"
+            android:layout_marginTop="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="260dp">
+        </android.support.v4.view.ViewPager>
 
-    <LinearLayout android:orientation="vertical" app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_student_main" tools:context=".student_main" android:background="#e6f2ff" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card_1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="12dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+
+        android:backgroundTint="#FFFDE7">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp">
 
 
-    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:backgroundTint="#fff" android:layout_marginTop="12dp" app:cardCornerRadius="5dp" app:cardElevation="10dp" android:id="@+id/card_1">
+            <TextView
+                android:id="@+id/top3textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginRight="20dp"
+                android:text="أفضل 3 أساتذة :"
+                android:textStyle="bold"
+                android:gravity="right"
+                android:textColor="#e29c9c"
+                android:textDirection="rtl"
+                android:padding="14dp"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                />
 
-    <android.support.v4.view.ViewPager android:layout_height="260dp" android:layout_width="match_parent" android:layout_marginTop="25dp" android:id="@+id/viewPagerQuote"> </android.support.v4.view.ViewPager>
 
-</android.support.v7.widget.CardView>
+            <com.tomer.fadingtextview.FadingTextView
+                android:id="@+id/top3text"
+                android:layout_width="300dp"
+                android:layout_height="35dp"
+                app:texts="@array/text"
+                android:textAlignment="center"
+                android:layout_below="@+id/top3textView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="4dp"
+                android:padding="4dp"
+                android:textDirection="rtl"
+                />
 
 
-    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:backgroundTint="#FFFDE7" android:layout_marginTop="20dp" app:cardCornerRadius="12dp" app:cardElevation="20dp" android:id="@+id/card_2" android:layout_marginRight="20dp" android:layout_marginLeft="20dp" android:layout_centerHorizontal="true" android:layout_below="@+id/card_1">
+
+        </RelativeLayout></android.support.v7.widget.CardView>
 
 
-    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/top3textView" android:layout_marginRight="20dp" android:layout_centerHorizontal="true" android:textAlignment="center" android:padding="14dp" android:textDirection="rtl" android:textColor="#e29c9c" android:gravity="right" android:textStyle="bold" android:text="أفضل 3 أساتذة :" android:textSize="20sp"/>
-
-    <com.tomer.fadingtextview.FadingTextView android:layout_height="35dp" android:layout_width="300dp" android:id="@+id/top3text" android:layout_centerHorizontal="true" android:layout_below="@+id/top3textView" android:textAlignment="center" android:padding="4dp" android:textDirection="rtl" android:layout_marginBottom="4dp" app:texts="@array/text"/>
-
-</RelativeLayout>
-
-</android.support.v7.widget.CardView>
-
-    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_marginTop="40dp" android:id="@+id/findInstructor" android:layout_centerHorizontal="true" android:textAlignment="center" android:textColor="@color/white" android:textStyle="bold" android:text="ابحث عن أستاذ" android:textSize="16dp" android:layout_marginBottom="7dp" android:drawablePadding="12dp"  android:layout_gravity="center"/>
+    <Button
+        android:id="@+id/findInstructor"
+        android:layout_width="250dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center"
+        android:text="ابحث عن أستاذ"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/buttonshape"
+        android:drawableLeft="@drawable/ic_search_black_24dp"
+        android:drawablePadding="12dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        />
 
 </LinearLayout>
